re-add post div, change post ids to class, update test

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,14 +1,16 @@
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
-    <li>{{this.author.name}}</li>
-    <li>{{this.createdAt}}</li>
-    <li>{{this.message}}</li>
-    <li id="likeCount">{{formatLikesNumber this.like.length}}</li>
-    <form id="like" action="/posts/like" method="post">
-      <input id="postid" type="hidden" value={{this._id}} name="postid" />
-      <input id="like" type="hidden" value={{this.like}} name="like" />
-      <input id="submit" type="submit" value="like" />
-    </form>
+    <div class="post">
+      <li>{{this.author.name}}</li>
+      <li>{{this.createdAt}}</li>
+      <li>{{this.message}}</li>
+      <li class="likeCount">{{formatLikesNumber this.like.length}}</li>
+      <form class="like" action="/posts/like" method="post">
+        <input class="postid" type="hidden" value={{this._id}} name="postid" />
+        <input class="like" type="hidden" value={{this.like}} name="like" />
+        <input class="submit" type="submit" value="like" />
+      </form>
+    </div>
   {{/each}}
 </ul>
