--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,19 +1,23 @@
- <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>{{title}}</title>
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-      <link rel='stylesheet' href='/stylesheets/style.css'>
-    </head>
-    <body>
-      <main>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,700;1,500&display=swap" rel="stylesheet"> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel='stylesheet' href='/stylesheets/style.css'>
+  </head>
+  <body>
+    <main>
+      <div class="center">
         <h1>AceBook</h1>
         <h2>Create account</h2>
         {{#if error}}
-          <div>{{ error }}</div>
+          <div id="error">{{ error }}</div>
         {{/if}}
         <form id="new-user-form" action="/users/new" method="post">
           <div><input id="name" type="text" name="name" value="" placeholder="Name"></div>
@@ -22,16 +26,17 @@
           <div><input id="password2" type="password" name="password2" value="" placeholder="Confirm Password"></div>
           <div><input id="submit" type="submit" value="Sign Up!"></div>
         </form>
-        <div>Do you already have an account? <a href="/sessions/new">Click here to login</a></div>
+        <div>Do you already have an account? <br><a href="/sessions/new">Click here</a> to login.</div>
       </main>
-      <footer class="fixed-bottom">
-        <div class="container text-center">
-          <div class="row">
-            <div class="col footer-items">  &copy; 2022 Monsters, Inc</div>
-            <div class="col footer-items"> A project by <a href="https://makers.tech/" target="_blank">Makers Academy</a> Students</div>
-            <div class="col footer-items"> <a href="#" target="_blank">About Us</a></div>
-          </div>
+    </div>
+    <footer class="fixed-bottom">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col footer-items">  &copy; 2022 Monsters, Inc</div>
+          <div class="col footer-items"> A project by <a href="https://makers.tech/" target="_blank">Makers Academy</a> Students</div>
+          <div class="col footer-items"> <a href="#" target="_blank">About Us</a></div>
         </div>
-      </footer>
-    </body>
-  </html>
+      </div>
+    </footer>
+  </body>
+</html>
