--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,15 +1,17 @@
 <br>
 <h1>Timeline</h1>
 
-<form id="new-post-form" action="/posts" method="post">
+<form id="new-post-form" action="/posts" method="post" enctype="multipart/form-data">
   <label for="message">What's on your mind?</label>
   <input id="message" type="text" name="message" value="">
+  <input id="image" type="file" name="image" value="Post">
   <input type="submit" value="Post">
 </form>
 
 <ul class="posts">
   {{#each posts}}
   <div class="post">
+    <img src="/images/{{this.image}}" alt="">
     <p> 
       <img class="profile_picture" src="{{this.photo_link}}" alt="profile_picture">
       {{this.name}} - {{this.date_string}}
