--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -20,10 +20,10 @@
           <div id="error">{{ error }}</div>
         {{/if}}
         <form id="new-user-form" action="/users/new" method="post">
-          <div><input id="name" type="text" name="name" value="" placeholder="Name"></div>
-          <div><input id="email" type="email" name="email" value="" placeholder="Email"></div>
-          <div><input id="password1" type="password" name="password1" value="" placeholder="Password"></div>
-          <div><input id="password2" type="password" name="password2" value="" placeholder="Confirm Password"></div>
+          <div><input id="name" type="text" name="name" value="" placeholder="Name" required></div>
+          <div><input id="email" type="email" name="email" value="" placeholder="Email" required></div>
+          <div><input id="password1" type="password" name="password1" value="" placeholder="Password" required></div>
+          <div><input id="password2" type="password" name="password2" value="" placeholder="Confirm Password" required></div>
           <div><input id="submit" type="submit" value="Sign Up!"></div>
         </form>
         <div>Do you already have an account? <br><a href="/sessions/new">Click here</a> to login.</div>
@@ -38,5 +38,6 @@
         </div>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
