--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -9,11 +9,15 @@
           <li>{{this.message}}</li>
           <li class="likeCount">{{formatLikesNumber this.like.length}}</li>
           <form class="like" action="/posts/like" method="post">
-            <input class="postid" type="hidden" value={{this._id}} name="postid" />
-            <input class="like" type="hidden" value={{this.like}} name="like" />
+            <input
+              class="postid"
+              type="hidden"
+              value={{this._id}}
+              name="postid"
+            />
             <input class="submit" type="submit" value="like" />
           </form>
-         </ul>
+        </ul>
       </div>
     </li>
   {{/each}}
