can upload image but not display

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -25,6 +25,8 @@
         </div>
         {{! if uploading a photo }}
         <div class="photos">
+
+          <img src="/uploads/image-1666006034339" />
         </div>
 
         {{! likes section }}
@@ -62,9 +64,9 @@
             {{/each}}
 
           {{else}}
-            <li>
+            <ul>
               NO Comments have been made
-            </li>
+            </ul>
           {{/if}}
           <form
             id="new-comment-form"
