integration test for submitting and viewing comments

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -34,8 +34,8 @@
               value={{this._id}}
               name="postid"
             />
-            <input class="comment-content" name="content" required />
-            <input class="submit" type="submit" value="comment" />
+            <input class="comment-input" name="content" required />
+            <input class="submit-comment" type="submit" value="comment" />
           </form>
         </ul>
       </div>
