Can display images

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -26,7 +26,12 @@
         {{! if uploading a photo }}
         <div class="photos">
 
-          <img src="/uploads/image-1666006034339" />
+          <img
+            src="data:image/png;base64,{{this.code}}"
+            width="100"
+            alt="wrong"
+          />
+
         </div>
 
         {{! likes section }}
