Posts show the author avatar

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -4,6 +4,7 @@
     <li>
       <div class="post">
         <ul>
+          <li><img class="author-post-image" src="{{formatPostAuthorImage this.author.image.contentType this.author.image.data}}" /></li>
           <li>{{this.author.name}}</li>
           <li>{{this.createdAt}}</li>
           <li>{{this.message}}</li>
