--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -5,7 +5,7 @@
       <div class="post">
         <ul>
           <li>{{this.author.name}}</li>
-          <li>{{this.createdAt}}</li>
+          <li>{{formatDate this.createdAt}}</li>
           <li>{{this.message}}</li>
           <li class="likeCount">{{formatLikesNumber this.like.length}}</li>
           <form class="like" action="/posts/like" method="post">
