--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -21,9 +21,9 @@
       </form>
     </div> 
       
-      {{#if post_owners[{{@index}}]}}
+      {{#if this.owner}}
       <!-- Delete a post -->
-      <form id="new-comment-form" action="/posts/delete/{{this._id}}" method="post">
+      <form id="delete-post-form" action="/posts/delete/{{this._id}}" method="post">
         <input type="submit" value="Delete">
       </form>
     {{/if}}
@@ -34,6 +34,12 @@
     </form>
     {{#each this.comments}}
       <div class="comment">{{this.name}} - {{this.message}} - {{this.createdAt}}</div>
+       {{#if this.comment_owner}}
+      <!-- Delete a comment -->
+      <form id="delete-comment-form" action="/posts/comment/delete/{{this.post_id}}/{{this._id}}" method="post">
+        <input type="submit" value="Delete">
+      </form>
+    {{/if}}
     {{/each}}
   </div>
   {{/each}}
