--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,8 +1,8 @@
 <form id="new-post-form" action="/posts" method="post" enctype="multipart/form-data">
   <div id="message-container"><label for="message">What's on your mind?</label></div>
   <div><input id="message" type="text" name="message" value="">
-  <input id="image" type="file" name="image" value="Post">
   <input type="submit" value="Post"></div>
+  <div><input id="image-selector" type="file" name="image" value="Post" accept=".png, .jpeg, .jpg, .gif"></div>
 </form>
 
 <ul class="posts">
@@ -22,8 +22,11 @@
         <input type="hidden" value="{{../session.user._id}}" name="userId">
         {{this.message}}
         <input type="submit" value="" id="like-button">
+        {{#if this.likes}}
         <span id="like-number">{{this.likes.length}}</span>
+        {{/if}}
       </form>
+      
     </div> 
     <!-- create a comment on the post -->
     <form id="new-comment-form" action="/posts/{{this._id}}" method="post">
