--- a/public/stylesheets/postcards.css
+++ b/public/stylesheets/postcards.css
@@ -9,7 +9,7 @@ h1 {
 
 .card {
   /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
   width: 50%;
@@ -18,7 +18,7 @@ h1 {
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 /* Add some padding inside the card container */
@@ -93,7 +93,7 @@ input.button:hover {
   margin-top: 20px;
 }
 
-.comments { 
+.comments {
   position: relative;
   top: -10px;
   list-style: none;
