--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,6 +1,11 @@
 <h1 class="title">Hi {{user.firstName}}! Welcome to the TimeLine</h1>
 
-<form id="new-post-form" action="/posts" method="POST">
+<form
+  id="new-post-form"
+  action="/posts"
+  enctype="multipart/form-data"
+  method="POST"
+>
   <input
     id="message"
     type="text"
@@ -8,6 +13,7 @@
     placeholder="Make a new post"
   />
   <input id="user" type="hidden" name="user" value={{user._id}} />
+  <input class="choose-file-btn" type="file" name="image" />
   <input type="submit" value="Submit" />
 </form>
 
