comments display author photo

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -6,7 +6,7 @@
     <ul id={{this._id}} class="post">
       <li><img
           class="author-post-image"
-          src="{{formatPostAuthorImage
+          src="{{formatImage
             this.author.image.contentType
             this.author.image.data
           }}"
@@ -25,6 +25,13 @@
         {{#each this.comments}}
           {{! a comment }}
           <ul id={{this.id}} class="comment">
+            <li><img
+                class="author-comment-image"
+                src="{{formatImage
+                  this.author.image.contentType
+                  this.author.image.data
+                }}"
+              /></li>
             <li class="comment-content">{{this.message}}</li>
             <li class="comment-author">By {{this.author.name}}</li>
             <li class="comment-date">On {{this.createdAt}}</li>
