updated post form with a new input type=file; testing post image model
Co-authored-by: ritaaktay <ritaaktay@gmail.com>

--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,5 +1,6 @@
-<form id="new-post-form" action="/posts" method="post">
+<form id="new-post-form" action="/posts" enctype="multipart/form-data" method="post">
   <label for="message">Message: </label>
   <input id="message" type="text" name="message" value="" />
-  <input id="submit" type="submit" value="Submit" />
+  <input id="post-image" type="file" name="uploadedImage" class="form-control-file" />
+  <input id="submit" type="submit" value="Submit" class="btn btn-default"/>
 </form>
