friend requests working at basic level

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,7 +27,7 @@
                     <a href="/settings/{{this.id}}" class="navbar__links" id="settings">Settings</a>
                 </li>
                 <li class="navbar__btn">
-                  <form action="/sessions?_method=DELETE" method="POST">
+                  <form id="log-out" action="/sessions?_method=DELETE" method="POST">
                     <input type="submit" class="button" value="Log Out" />
                   </form>
                 </li>
