--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,8 +1,10 @@
-<h1 class="title">Hi {{user.firstName}}! Welcome to your profile</h1>
+<h1 class="title">Hi {{user.firstName}}! Welcome to your profile</h1> 
 
+<a href="requests" class="friend-requests" > Friend requests </a>
+                
 <form id="new-post-form" action="/posts" method="POST">
   <input id="message" type="text" name="message" placeholder="Make a new post" />
-  <input id="user" type="hidden" name="user" value={{user._id}} />
+  <input class="hidden" id="user" type="hidden" name="user" value={{user._id}} />
   <input type="submit" value="Submit" />
 </form>
 
@@ -44,7 +46,7 @@
               <ul>
                 {{this.content}}
                 by
-                <a href="users/{{this.user._id}}" class="userLink">{{this.user.firstName}}</a>
+                <a href="{{this.user._id}}" class="userLink">{{this.user.firstName}}</a>
               </ul>
               <ul>
                 <form
