--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,7 +21,7 @@
                     <a href="/posts" class="navbar__links" id="home-page">Home</a>
                 </li>
                 <li class="navbar__item">
-                 <a href="/users/index" class="navbar__links" id="settings">My Profile</a>
+                 <a href="/users/index" class="navbar__links" id="my-profile">My Profile</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/settings/{{this.id}}" class="navbar__links" id="settings">Settings</a>
