popalte added to user for friendRequests

--- a/views/settings/index.hbs
+++ b/views/settings/index.hbs
@@ -12,3 +12,7 @@
     <input id="upload-file" type="submit" value="Upload" class="btn btn-default" />
   </div>
 </form>
+
+<div id="friend-requests">Your friends requests:
+  {{#each user.friendRequests}}
+</div>
