--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,37 +2,41 @@
   <head>
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/layout.css" />
-    <link rel="stylesheet" href="/stylesheets/postcards.css">
+    <link rel="stylesheet" href="/stylesheets/postcards.css" />
   </head>
   <body>
 
-
     <!-- Navbar section -->
     <nav class="navbar">
-        <div class="navbar__container">
-            <a href="/posts" id="navbar__logo">Acebook</a>
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/posts" class="navbar__links" id="home-page">Home</a>
-                </li>
-                <li class="navbar__item">
-                 <a href="/users/index" class="navbar__links" id="settings">My Profile</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/settings/{{this.id}}" class="navbar__links" id="settings">Settings</a>
-                </li>
-                <li class="navbar__btn">
-                  <form action="/sessions?_method=DELETE" method="POST">
-                    <input type="submit" class="button" value="Log Out" />
-                  </form>
-                </li>
-            </ul>
+      <div class="navbar__container">
+        <a href="/posts" id="navbar__logo">Acebook</a>
+        <div class="navbar__toggle" id="mobile-menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
+        <ul class="navbar__menu">
+          <li class="navbar__item">
+            <a href="/posts" class="navbar__links" id="home-page">Home</a>
+          </li>
+          <li class="navbar__item">
+            <a href="/users/index" class="navbar__links" id="settings">My
+              Profile</a>
+          </li>
+          <li class="navbar__item">
+            <a
+              href="/users/settings"
+              class="navbar__links"
+              id="settings"
+            >Settings</a>
+          </li>
+          <li class="navbar__btn">
+            <form action="/sessions?_method=DELETE" method="POST">
+              <input type="submit" class="button" value="Log Out" />
+            </form>
+          </li>
+        </ul>
+      </div>
     </nav>
     {{{body}}}
   </body>
