--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -9,11 +9,11 @@
   body {
     margin: 0;
     padding: 0;
-    background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+    background: lightgrey;
   }
 
   .navbar {
-      background: #131313;
+      background: white;
       height: 80px;
       display: flex;
       justify-content: center;
@@ -36,18 +36,17 @@
   }
   
   #navbar__logo {
-      background-color: #ff8177;
-      background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
-      background-size: 100%;
-      -webkit-background-clip: text;
-      -moz-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      -moz-text-fill-color: transparent;
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      text-decoration: none;
-      font-size: 2rem;
+    background-color: #0175e4;
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 2rem;
   }
   
   .navbar__menu {
@@ -59,10 +58,11 @@
   
   .navbar__item {
       height: 80px;
+      color: #0175e4;
   }
   
   .navbar__links {
-      color: #fff;
+      color: #0175e4;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -91,9 +91,7 @@
       border: none;
       outline: none;
       border-radius: 4px;
-      background: #833ab4;
-      background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-      background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+      background: #0175e4;
       color: #fff;
       transition: 0.3s ease;
       padding-top: 10px;
@@ -107,24 +105,31 @@
 
   .button:hover {
     background: -webkit-linear-gradient(to left, #fcb045, #fcb045, #fcb045);
-    background: linear-gradient(to left, #fcb045, #fcb045, #fcb045);
+    background: #0175E4;
     /* background: #fcb045; */
-    color: #9518fc;
+    color: white;
     transition: 1s ease;
   }
   
   .navbar__links:hover {
-      color: #9518fc;
+      color: white;
       transition: all 0.3s ease;
   }
 
   .button:hover {
     transition: all 0.3s ease-in-out;
-    color: #9518fc;
-    background: -webkit-linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);
+    color: white;
+    background: #5495d1;
   }
 
-  
+  /* .submit-container {
+    display: relative;
+    position: center;
+  }
+
+  #new-post-form {
+    display: block;
+  } */
   
   @media screen and (max-width: 960px) {
       .navbar__container {
