--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,11 +1,37 @@
 <h1>Profile Page</h1>
 <div class="user">
-  <img id="profile-image" src="{{user.image}}" />
-  <h2 id="user-name">{{user.name}}</h2>
-</div>
+  <img
+    id="profile-image"
+    src="{{formatImage user.image.contentType user.image.data}}"
+  />
+  <h3 id="user-name">{{user.name}}</h3>
+  {{#if loggedIn}}
+    <form class="add-friend-form" action="/friends/request" method="post">
+      <input
+        class="requestee-id"
+        type="hidden"
+        value="{{user._id}}"
+        name="requestee"
+      />
+      {{#if isPending}}
+        <input class="already-fiends-button" type="submit" value="Your friend request is still pending" disabled>
+      {{else if isFriends}}
+        <input class="already-fiends-button" type="submit" value="You are friends with {{user.name}} 🎉" disabled>
+      {{else}}
+        <input class="add-friend-button" type="submit" value="Add Friend" />
+      {{/if}}
+    </form>
+  </div>
+  {{/if}}
 <div>
-  <h2>Friends</h2>
-  {{#each user.friends}}
-  <li>{{this.name}}</li>
-  {{/each}}
+  {{#if hasFriends}}
+    <h3>Friends</h3>
+    {{#each user.friends}}
+      <li><a href="/users/{{this._id}}">{{this.name}}</a></li>
+      <li><img
+          class="friend-profile-image"
+          src="{{formatImage this.image.contentType this.image.data}}"
+        /></li>
+    {{/each}}
+  {{/if}}
 </div>
